/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { CourseInstance } from './CourseInstance';
import {
    CourseInstanceFromJSON,
    CourseInstanceFromJSONTyped,
    CourseInstanceToJSON,
} from './CourseInstance';
import type { Examiner } from './Examiner';
import {
    ExaminerFromJSON,
    ExaminerFromJSONTyped,
    ExaminerToJSON,
} from './Examiner';
import type { Mark } from './Mark';
import {
    MarkFromJSON,
    MarkFromJSONTyped,
    MarkToJSON,
} from './Mark';
import type { Queue } from './Queue';
import {
    QueueFromJSON,
    QueueFromJSONTyped,
    QueueToJSON,
} from './Queue';
import type { QueuePlace } from './QueuePlace';
import {
    QueuePlaceFromJSON,
    QueuePlaceFromJSONTyped,
    QueuePlaceToJSON,
} from './QueuePlace';
import type { QueuePlaceCriterion } from './QueuePlaceCriterion';
import {
    QueuePlaceCriterionFromJSON,
    QueuePlaceCriterionFromJSONTyped,
    QueuePlaceCriterionToJSON,
} from './QueuePlaceCriterion';
import type { QueueTemplate } from './QueueTemplate';
import {
    QueueTemplateFromJSON,
    QueueTemplateFromJSONTyped,
    QueueTemplateToJSON,
} from './QueueTemplate';
import type { User } from './User';
import {
    UserFromJSON,
    UserFromJSONTyped,
    UserToJSON,
} from './User';

/**
 * 
 * @export
 * @interface Criterion
 */
export interface Criterion {
    /**
     * 
     * @type {number}
     * @memberof Criterion
     */
    id: number;
    /**
     * 
     * @type {Date}
     * @memberof Criterion
     */
    createdAt: Date;
    /**
     * 
     * @type {Date}
     * @memberof Criterion
     */
    updatedAt: Date;
    /**
     * 
     * @type {string}
     * @memberof Criterion
     */
    name: string;
    /**
     * 
     * @type {Array<QueuePlace>}
     * @memberof Criterion
     */
    queuePlaces?: Array<QueuePlace>;
    /**
     * 
     * @type {CourseInstance}
     * @memberof Criterion
     */
    courseInstance: CourseInstance;
    /**
     * 
     * @type {Array<Examiner>}
     * @memberof Criterion
     */
    examiners?: Array<Examiner>;
    /**
     * 
     * @type {Array<User>}
     * @memberof Criterion
     */
    markedStudents?: Array<User>;
    /**
     * 
     * @type {Array<QueueTemplate>}
     * @memberof Criterion
     */
    queueTemplates?: Array<QueueTemplate>;
    /**
     * 
     * @type {Array<Queue>}
     * @memberof Criterion
     */
    queues?: Array<Queue>;
    /**
     * 
     * @type {Array<QueuePlaceCriterion>}
     * @memberof Criterion
     */
    queuePlaceCriteria?: Array<QueuePlaceCriterion>;
    /**
     * 
     * @type {Array<Mark>}
     * @memberof Criterion
     */
    marks?: Array<Mark>;
}

/**
 * Check if a given object implements the Criterion interface.
 */
export function instanceOfCriterion(value: object): boolean {
    if (!('id' in value)) return false;
    if (!('createdAt' in value)) return false;
    if (!('updatedAt' in value)) return false;
    if (!('name' in value)) return false;
    if (!('courseInstance' in value)) return false;
    return true;
}

export function CriterionFromJSON(json: any): Criterion {
    return CriterionFromJSONTyped(json, false);
}

export function CriterionFromJSONTyped(json: any, ignoreDiscriminator: boolean): Criterion {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'createdAt': (new Date(json['created_at'])),
        'updatedAt': (new Date(json['updated_at'])),
        'name': json['name'],
        'queuePlaces': json['queue_places'] == null ? undefined : ((json['queue_places'] as Array<any>).map(QueuePlaceFromJSON)),
        'courseInstance': CourseInstanceFromJSON(json['course_instance']),
        'examiners': json['examiners'] == null ? undefined : ((json['examiners'] as Array<any>).map(ExaminerFromJSON)),
        'markedStudents': json['marked_students'] == null ? undefined : ((json['marked_students'] as Array<any>).map(UserFromJSON)),
        'queueTemplates': json['queue_templates'] == null ? undefined : ((json['queue_templates'] as Array<any>).map(QueueTemplateFromJSON)),
        'queues': json['queues'] == null ? undefined : ((json['queues'] as Array<any>).map(QueueFromJSON)),
        'queuePlaceCriteria': json['queue_place_criteria'] == null ? undefined : ((json['queue_place_criteria'] as Array<any>).map(QueuePlaceCriterionFromJSON)),
        'marks': json['marks'] == null ? undefined : ((json['marks'] as Array<any>).map(MarkFromJSON)),
    };
}

export function CriterionToJSON(value?: Criterion | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'created_at': ((value['createdAt']).toISOString()),
        'updated_at': ((value['updatedAt']).toISOString()),
        'name': value['name'],
        'queue_places': value['queuePlaces'] == null ? undefined : ((value['queuePlaces'] as Array<any>).map(QueuePlaceToJSON)),
        'course_instance': CourseInstanceToJSON(value['courseInstance']),
        'examiners': value['examiners'] == null ? undefined : ((value['examiners'] as Array<any>).map(ExaminerToJSON)),
        'marked_students': value['markedStudents'] == null ? undefined : ((value['markedStudents'] as Array<any>).map(UserToJSON)),
        'queue_templates': value['queueTemplates'] == null ? undefined : ((value['queueTemplates'] as Array<any>).map(QueueTemplateToJSON)),
        'queues': value['queues'] == null ? undefined : ((value['queues'] as Array<any>).map(QueueToJSON)),
        'queue_place_criteria': value['queuePlaceCriteria'] == null ? undefined : ((value['queuePlaceCriteria'] as Array<any>).map(QueuePlaceCriterionToJSON)),
        'marks': value['marks'] == null ? undefined : ((value['marks'] as Array<any>).map(MarkToJSON)),
    };
}

