/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { DiscordServer } from './DiscordServer';
import {
    DiscordServerFromJSON,
    DiscordServerFromJSONTyped,
    DiscordServerToJSON,
} from './DiscordServer';

/**
 * 
 * @export
 * @interface DiscordRole
 */
export interface DiscordRole {
    /**
     * 
     * @type {string}
     * @memberof DiscordRole
     */
    id: string;
    /**
     * 
     * @type {string}
     * @memberof DiscordRole
     */
    type: DiscordRoleTypeEnum;
    /**
     * 
     * @type {DiscordServer}
     * @memberof DiscordRole
     */
    discordServer: DiscordServer;
}


/**
 * @export
 */
export const DiscordRoleTypeEnum = {
    Student: 'student',
    Examiner: 'examiner'
} as const;
export type DiscordRoleTypeEnum = typeof DiscordRoleTypeEnum[keyof typeof DiscordRoleTypeEnum];


/**
 * Check if a given object implements the DiscordRole interface.
 */
export function instanceOfDiscordRole(value: object): boolean {
    if (!('id' in value)) return false;
    if (!('type' in value)) return false;
    if (!('discordServer' in value)) return false;
    return true;
}

export function DiscordRoleFromJSON(json: any): DiscordRole {
    return DiscordRoleFromJSONTyped(json, false);
}

export function DiscordRoleFromJSONTyped(json: any, ignoreDiscriminator: boolean): DiscordRole {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'type': json['type'],
        'discordServer': DiscordServerFromJSON(json['discord_server']),
    };
}

export function DiscordRoleToJSON(value?: DiscordRole | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'type': value['type'],
        'discord_server': DiscordServerToJSON(value['discordServer']),
    };
}

