/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { ChannelsForCourse } from './ChannelsForCourse';
import {
    ChannelsForCourseFromJSON,
    ChannelsForCourseFromJSONTyped,
    ChannelsForCourseToJSON,
} from './ChannelsForCourse';
import type { CourseInstance } from './CourseInstance';
import {
    CourseInstanceFromJSON,
    CourseInstanceFromJSONTyped,
    CourseInstanceToJSON,
} from './CourseInstance';
import type { DiscordChannel } from './DiscordChannel';
import {
    DiscordChannelFromJSON,
    DiscordChannelFromJSONTyped,
    DiscordChannelToJSON,
} from './DiscordChannel';
import type { DiscordRole } from './DiscordRole';
import {
    DiscordRoleFromJSON,
    DiscordRoleFromJSONTyped,
    DiscordRoleToJSON,
} from './DiscordRole';

/**
 * 
 * @export
 * @interface DiscordServer
 */
export interface DiscordServer {
    /**
     * 
     * @type {string}
     * @memberof DiscordServer
     */
    id: string;
    /**
     * 
     * @type {Array<ChannelsForCourse>}
     * @memberof DiscordServer
     */
    channelsForCourses?: Array<ChannelsForCourse>;
    /**
     * 
     * @type {Array<CourseInstance>}
     * @memberof DiscordServer
     */
    courseInstances?: Array<CourseInstance>;
    /**
     * 
     * @type {Array<DiscordChannel>}
     * @memberof DiscordServer
     */
    discordChannels?: Array<DiscordChannel>;
    /**
     * 
     * @type {Array<DiscordRole>}
     * @memberof DiscordServer
     */
    discordRoles?: Array<DiscordRole>;
}

/**
 * Check if a given object implements the DiscordServer interface.
 */
export function instanceOfDiscordServer(value: object): boolean {
    if (!('id' in value)) return false;
    return true;
}

export function DiscordServerFromJSON(json: any): DiscordServer {
    return DiscordServerFromJSONTyped(json, false);
}

export function DiscordServerFromJSONTyped(json: any, ignoreDiscriminator: boolean): DiscordServer {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'channelsForCourses': json['channels_for_courses'] == null ? undefined : ((json['channels_for_courses'] as Array<any>).map(ChannelsForCourseFromJSON)),
        'courseInstances': json['course_instances'] == null ? undefined : ((json['course_instances'] as Array<any>).map(CourseInstanceFromJSON)),
        'discordChannels': json['discord_channels'] == null ? undefined : ((json['discord_channels'] as Array<any>).map(DiscordChannelFromJSON)),
        'discordRoles': json['discord_roles'] == null ? undefined : ((json['discord_roles'] as Array<any>).map(DiscordRoleFromJSON)),
    };
}

export function DiscordServerToJSON(value?: DiscordServer | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'channels_for_courses': value['channelsForCourses'] == null ? undefined : ((value['channelsForCourses'] as Array<any>).map(ChannelsForCourseToJSON)),
        'course_instances': value['courseInstances'] == null ? undefined : ((value['courseInstances'] as Array<any>).map(CourseInstanceToJSON)),
        'discord_channels': value['discordChannels'] == null ? undefined : ((value['discordChannels'] as Array<any>).map(DiscordChannelToJSON)),
        'discord_roles': value['discordRoles'] == null ? undefined : ((value['discordRoles'] as Array<any>).map(DiscordRoleToJSON)),
    };
}

