/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { CourseInstance } from './CourseInstance';
import {
    CourseInstanceFromJSON,
    CourseInstanceFromJSONTyped,
    CourseInstanceToJSON,
} from './CourseInstance';
import type { MarkTableTab } from './MarkTableTab';
import {
    MarkTableTabFromJSON,
    MarkTableTabFromJSONTyped,
    MarkTableTabToJSON,
} from './MarkTableTab';

/**
 * 
 * @export
 * @interface MarkTable
 */
export interface MarkTable {
    /**
     * 
     * @type {number}
     * @memberof MarkTable
     */
    id: number;
    /**
     * 
     * @type {Date}
     * @memberof MarkTable
     */
    createdAt: Date;
    /**
     * 
     * @type {Date}
     * @memberof MarkTable
     */
    updatedAt: Date;
    /**
     * 
     * @type {string}
     * @memberof MarkTable
     */
    name: string;
    /**
     * 
     * @type {string}
     * @memberof MarkTable
     */
    spreadsheetId: string;
    /**
     * 
     * @type {CourseInstance}
     * @memberof MarkTable
     */
    courseInstance: CourseInstance;
    /**
     * 
     * @type {Array<MarkTableTab>}
     * @memberof MarkTable
     */
    markTableTabs?: Array<MarkTableTab>;
}

/**
 * Check if a given object implements the MarkTable interface.
 */
export function instanceOfMarkTable(value: object): boolean {
    if (!('id' in value)) return false;
    if (!('createdAt' in value)) return false;
    if (!('updatedAt' in value)) return false;
    if (!('name' in value)) return false;
    if (!('spreadsheetId' in value)) return false;
    if (!('courseInstance' in value)) return false;
    return true;
}

export function MarkTableFromJSON(json: any): MarkTable {
    return MarkTableFromJSONTyped(json, false);
}

export function MarkTableFromJSONTyped(json: any, ignoreDiscriminator: boolean): MarkTable {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'createdAt': (new Date(json['created_at'])),
        'updatedAt': (new Date(json['updated_at'])),
        'name': json['name'],
        'spreadsheetId': json['spreadsheet_id'],
        'courseInstance': CourseInstanceFromJSON(json['course_instance']),
        'markTableTabs': json['mark_table_tabs'] == null ? undefined : ((json['mark_table_tabs'] as Array<any>).map(MarkTableTabFromJSON)),
    };
}

export function MarkTableToJSON(value?: MarkTable | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'created_at': ((value['createdAt']).toISOString()),
        'updated_at': ((value['updatedAt']).toISOString()),
        'name': value['name'],
        'spreadsheet_id': value['spreadsheetId'],
        'course_instance': CourseInstanceToJSON(value['courseInstance']),
        'mark_table_tabs': value['markTableTabs'] == null ? undefined : ((value['markTableTabs'] as Array<any>).map(MarkTableTabToJSON)),
    };
}

