/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { Criterion } from './Criterion';
import {
    CriterionFromJSON,
    CriterionFromJSONTyped,
    CriterionToJSON,
} from './Criterion';
import type { Examiner } from './Examiner';
import {
    ExaminerFromJSON,
    ExaminerFromJSONTyped,
    ExaminerToJSON,
} from './Examiner';
import type { MarkTableTab } from './MarkTableTab';
import {
    MarkTableTabFromJSON,
    MarkTableTabFromJSONTyped,
    MarkTableTabToJSON,
} from './MarkTableTab';
import type { QueuePlace } from './QueuePlace';
import {
    QueuePlaceFromJSON,
    QueuePlaceFromJSONTyped,
    QueuePlaceToJSON,
} from './QueuePlace';
import type { QueueTemplate } from './QueueTemplate';
import {
    QueueTemplateFromJSON,
    QueueTemplateFromJSONTyped,
    QueueTemplateToJSON,
} from './QueueTemplate';
import type { User } from './User';
import {
    UserFromJSON,
    UserFromJSONTyped,
    UserToJSON,
} from './User';

/**
 * 
 * @export
 * @interface Queue
 */
export interface Queue {
    /**
     * 
     * @type {number}
     * @memberof Queue
     */
    id: number;
    /**
     * 
     * @type {Date}
     * @memberof Queue
     */
    createdAt: Date;
    /**
     * 
     * @type {Date}
     * @memberof Queue
     */
    updatedAt: Date;
    /**
     * 
     * @type {string}
     * @memberof Queue
     */
    name: string;
    /**
     * 
     * @type {number}
     * @memberof Queue
     */
    signUpLeadTime: number;
    /**
     * 
     * @type {boolean}
     * @memberof Queue
     */
    signUpStarted: boolean;
    /**
     * 
     * @type {Date}
     * @memberof Queue
     */
    startTime?: Date;
    /**
     * 
     * @type {boolean}
     * @memberof Queue
     */
    queueStarted: boolean;
    /**
     * 
     * @type {Date}
     * @memberof Queue
     */
    endTime?: Date;
    /**
     * 
     * @type {boolean}
     * @memberof Queue
     */
    queueEnded: boolean;
    /**
     * 
     * @type {boolean}
     * @memberof Queue
     */
    simpleQueue: boolean;
    /**
     * 
     * @type {number}
     * @memberof Queue
     */
    sheetId?: number;
    /**
     * 
     * @type {Array<QueuePlace>}
     * @memberof Queue
     */
    places?: Array<QueuePlace>;
    /**
     * 
     * @type {QueueTemplate}
     * @memberof Queue
     */
    queueTemplate: QueueTemplate;
    /**
     * 
     * @type {Array<Criterion>}
     * @memberof Queue
     */
    criteria?: Array<Criterion>;
    /**
     * 
     * @type {MarkTableTab}
     * @memberof Queue
     */
    markTableTab: MarkTableTab;
    /**
     * 
     * @type {Array<User>}
     * @memberof Queue
     */
    examinerUsers?: Array<User>;
    /**
     * 
     * @type {Array<Examiner>}
     * @memberof Queue
     */
    examiners?: Array<Examiner>;
}

/**
 * Check if a given object implements the Queue interface.
 */
export function instanceOfQueue(value: object): boolean {
    if (!('id' in value)) return false;
    if (!('createdAt' in value)) return false;
    if (!('updatedAt' in value)) return false;
    if (!('name' in value)) return false;
    if (!('signUpLeadTime' in value)) return false;
    if (!('signUpStarted' in value)) return false;
    if (!('queueStarted' in value)) return false;
    if (!('queueEnded' in value)) return false;
    if (!('simpleQueue' in value)) return false;
    if (!('queueTemplate' in value)) return false;
    if (!('markTableTab' in value)) return false;
    return true;
}

export function QueueFromJSON(json: any): Queue {
    return QueueFromJSONTyped(json, false);
}

export function QueueFromJSONTyped(json: any, ignoreDiscriminator: boolean): Queue {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'createdAt': (new Date(json['created_at'])),
        'updatedAt': (new Date(json['updated_at'])),
        'name': json['name'],
        'signUpLeadTime': json['sign_up_lead_time'],
        'signUpStarted': json['sign_up_started'],
        'startTime': json['start_time'] == null ? undefined : (new Date(json['start_time'])),
        'queueStarted': json['queue_started'],
        'endTime': json['end_time'] == null ? undefined : (new Date(json['end_time'])),
        'queueEnded': json['queue_ended'],
        'simpleQueue': json['simple_queue'],
        'sheetId': json['sheet_id'] == null ? undefined : json['sheet_id'],
        'places': json['places'] == null ? undefined : ((json['places'] as Array<any>).map(QueuePlaceFromJSON)),
        'queueTemplate': QueueTemplateFromJSON(json['queue_template']),
        'criteria': json['criteria'] == null ? undefined : ((json['criteria'] as Array<any>).map(CriterionFromJSON)),
        'markTableTab': MarkTableTabFromJSON(json['mark_table_tab']),
        'examinerUsers': json['examiner_users'] == null ? undefined : ((json['examiner_users'] as Array<any>).map(UserFromJSON)),
        'examiners': json['examiners'] == null ? undefined : ((json['examiners'] as Array<any>).map(ExaminerFromJSON)),
    };
}

export function QueueToJSON(value?: Queue | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'created_at': ((value['createdAt']).toISOString()),
        'updated_at': ((value['updatedAt']).toISOString()),
        'name': value['name'],
        'sign_up_lead_time': value['signUpLeadTime'],
        'sign_up_started': value['signUpStarted'],
        'start_time': value['startTime'] == null ? undefined : ((value['startTime']).toISOString()),
        'queue_started': value['queueStarted'],
        'end_time': value['endTime'] == null ? undefined : ((value['endTime']).toISOString()),
        'queue_ended': value['queueEnded'],
        'simple_queue': value['simpleQueue'],
        'sheet_id': value['sheetId'],
        'places': value['places'] == null ? undefined : ((value['places'] as Array<any>).map(QueuePlaceToJSON)),
        'queue_template': QueueTemplateToJSON(value['queueTemplate']),
        'criteria': value['criteria'] == null ? undefined : ((value['criteria'] as Array<any>).map(CriterionToJSON)),
        'mark_table_tab': MarkTableTabToJSON(value['markTableTab']),
        'examiner_users': value['examinerUsers'] == null ? undefined : ((value['examinerUsers'] as Array<any>).map(UserToJSON)),
        'examiners': value['examiners'] == null ? undefined : ((value['examiners'] as Array<any>).map(ExaminerToJSON)),
    };
}

