/* tslint:disable */
/* eslint-disable */
/**
 * Ent Schema API
 * This is an auto generated API description made out of an Ent schema definition
 *
 * The version of the OpenAPI document: 0.1.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { mapValues } from '../runtime';
import type { Criterion } from './Criterion';
import {
    CriterionFromJSON,
    CriterionFromJSONTyped,
    CriterionToJSON,
} from './Criterion';
import type { Examiner } from './Examiner';
import {
    ExaminerFromJSON,
    ExaminerFromJSONTyped,
    ExaminerToJSON,
} from './Examiner';
import type { Queue } from './Queue';
import {
    QueueFromJSON,
    QueueFromJSONTyped,
    QueueToJSON,
} from './Queue';
import type { QueuePlaceCriterion } from './QueuePlaceCriterion';
import {
    QueuePlaceCriterionFromJSON,
    QueuePlaceCriterionFromJSONTyped,
    QueuePlaceCriterionToJSON,
} from './QueuePlaceCriterion';
import type { User } from './User';
import {
    UserFromJSON,
    UserFromJSONTyped,
    UserToJSON,
} from './User';

/**
 * 
 * @export
 * @interface QueuePlace
 */
export interface QueuePlace {
    /**
     * 
     * @type {number}
     * @memberof QueuePlace
     */
    id: number;
    /**
     * 
     * @type {Date}
     * @memberof QueuePlace
     */
    createdAt: Date;
    /**
     * 
     * @type {Date}
     * @memberof QueuePlace
     */
    updatedAt: Date;
    /**
     * 
     * @type {number}
     * @memberof QueuePlace
     */
    position: number;
    /**
     * 
     * @type {string}
     * @memberof QueuePlace
     */
    note: string;
    /**
     * 
     * @type {Queue}
     * @memberof QueuePlace
     */
    queue: Queue;
    /**
     * 
     * @type {Array<Criterion>}
     * @memberof QueuePlace
     */
    criteria?: Array<Criterion>;
    /**
     * 
     * @type {Array<User>}
     * @memberof QueuePlace
     */
    team?: Array<User>;
    /**
     * 
     * @type {Array<Examiner>}
     * @memberof QueuePlace
     */
    currentExaminer?: Array<Examiner>;
    /**
     * 
     * @type {Array<QueuePlaceCriterion>}
     * @memberof QueuePlace
     */
    queuePlaceCriteria?: Array<QueuePlaceCriterion>;
}

/**
 * Check if a given object implements the QueuePlace interface.
 */
export function instanceOfQueuePlace(value: object): boolean {
    if (!('id' in value)) return false;
    if (!('createdAt' in value)) return false;
    if (!('updatedAt' in value)) return false;
    if (!('position' in value)) return false;
    if (!('note' in value)) return false;
    if (!('queue' in value)) return false;
    return true;
}

export function QueuePlaceFromJSON(json: any): QueuePlace {
    return QueuePlaceFromJSONTyped(json, false);
}

export function QueuePlaceFromJSONTyped(json: any, ignoreDiscriminator: boolean): QueuePlace {
    if (json == null) {
        return json;
    }
    return {
        
        'id': json['id'],
        'createdAt': (new Date(json['created_at'])),
        'updatedAt': (new Date(json['updated_at'])),
        'position': json['position'],
        'note': json['note'],
        'queue': QueueFromJSON(json['queue']),
        'criteria': json['criteria'] == null ? undefined : ((json['criteria'] as Array<any>).map(CriterionFromJSON)),
        'team': json['team'] == null ? undefined : ((json['team'] as Array<any>).map(UserFromJSON)),
        'currentExaminer': json['current_examiner'] == null ? undefined : ((json['current_examiner'] as Array<any>).map(ExaminerFromJSON)),
        'queuePlaceCriteria': json['queue_place_criteria'] == null ? undefined : ((json['queue_place_criteria'] as Array<any>).map(QueuePlaceCriterionFromJSON)),
    };
}

export function QueuePlaceToJSON(value?: QueuePlace | null): any {
    if (value == null) {
        return value;
    }
    return {
        
        'id': value['id'],
        'created_at': ((value['createdAt']).toISOString()),
        'updated_at': ((value['updatedAt']).toISOString()),
        'position': value['position'],
        'note': value['note'],
        'queue': QueueToJSON(value['queue']),
        'criteria': value['criteria'] == null ? undefined : ((value['criteria'] as Array<any>).map(CriterionToJSON)),
        'team': value['team'] == null ? undefined : ((value['team'] as Array<any>).map(UserToJSON)),
        'current_examiner': value['currentExaminer'] == null ? undefined : ((value['currentExaminer'] as Array<any>).map(ExaminerToJSON)),
        'queue_place_criteria': value['queuePlaceCriteria'] == null ? undefined : ((value['queuePlaceCriteria'] as Array<any>).map(QueuePlaceCriterionToJSON)),
    };
}

